# pypcode-emu

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
pypcode_emu/: __init__.py  elf.py  emu.py  ghidra.py  histogram.py  llvm.py  llvm_utils.py  ntypes.py  numeric_colors.py  pcode_analysis.py  pcode_utils.py  utils.py
pypcode_emu/native/: harness.cpp  lifted-interrupts.cpp  lifted-types.h  lifted.cpp  lifted.h  pcode-opcodes.h  picosha2.h  xxhash.h
pypcode_emu/tools/: __init__.py  pypcode_emu.py  pypcode_emu_llvm_tool.py  pypcode_emu_tool.py
scripts/: fact_dump.py  inh_test.py  ipy_pcode.py  ipy_pcode_headless.py  llvm_sandbox.py  opcode_header_gen.py  typing_sandbox.py  z3_sandbox.py
tests/pypcode_emu/: test_emu.py  test_llvm.py
tests/pypcode_emu/samples/: crc32.c  fact  fact.c  liveness  liveness.c  rand1  rand1.c  rand2  rand2.c  rand3  rand3.c
