[metadata]
name = pypcode_emu
author = Jevin Sweval
author_email = jevinsweval@gmail.com
description = pypcode-emu - Ghidra P-Code emulation in Python
version = attr: pypcode_emu.__version__
url = https://github.com/jevinskie/pypcode-emu

[options]
python_requires = >= 3.8
packages = find:
zip_safe = True
install_requires =
  rich >= 11.2.0
  attrs >= 21.4.0
  typing-extensions >= 4.1.0
  nativetypes >= 1.0.4
  # pypcode @ git+https://github.com/jevinskie/pypcode#egg=pypcode
  untangle >= 1.1.1
  filebytes >= 0.10.2
  icecream >= 2.1.2
  ghidra-bridge >= 0.2.5
  llvmlite >= 0.38.0

[options.extras_require]
dev =
  black >= 22.1.0
  isort >= 5.10.1
  pytest >= 7.0.1
  pytest-clarity >= 1.0.1
  pytest-pycharm >= 0.7.0
  pytest-randomly >= 3.11.0
  pytest-cov >= 3.0.0
  mypy >= 0.931
  ipython >= 8.0.1
  pre-commit >= 2.17.0

[options.entry_points]
console_scripts =
  pypcode-emu = pypcode_emu.tools.pypcode_emu_tool:main
  pypcode-emu-llvm = pypcode_emu.tools.pypcode_emu_llvm_tool:main

[isort]
profile = black

[build-system]
requires = ["setuptools", "wheel"]
